--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <!-- Your code here -->
 <img src = https://s3.amazonaws.com/ironboard-learn/lion.jpg>
-img src = 
+img src = https://s3.amazonaws.com/ironboard-learn/lion.jpg alt = "Lion Roaring">
+
+
 
 <img src = https://s3.amazonaws.com/ironboard-learn/lion.jpg
 alt = "Lion Roaring" title = "Roar!">
